--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" name="password" id="password" value="" min="6" max="32" steps="1" />
 
       <!-- 👇🏻 Add a class of "copied" when the user clicks this button 👇🏻 -->
-      <button class="copy">
+      <button class="copy" data-clipboard-target="#password">
         <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M37.3147 2.83081H20.6332C18.1514 2.83081 16.1332 4.85131 16.1332 7.33081V38.8308C16.1332 41.3126 18.1514 43.3308 20.6332 43.3308H43.1332C45.6149 43.3308 47.6332 41.3126 47.6332 38.8308V13.1493L37.3147 2.83081ZM43.1354 38.8308H20.6332V7.33081H34.1332V16.3308H43.1332L43.1354 38.8308Z" />
@@ -30,7 +30,7 @@
 
     <div class="field">
       <input type="range" name="length" id="length" value="12" min="6" max="32" />
-      <span id="lengthText">12</span> characters
+      <span id="lengthText"><pre>12 </pre></span>characters
     </div>
 
     <div class="field">
@@ -59,6 +59,7 @@
     </div>
 
   </div>
+
   <script src="app.js"></script>
 </body>
 
